--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Nivel Dios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
+  <title>TrigguiApp – Trascendente</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -12,7 +12,6 @@
       width: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
-      overflow: hidden;
     }
     .grid {
       position: absolute;
@@ -22,39 +21,36 @@
       right: 1.5vw;
       display: grid;
       gap: 1vw;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
     }
     .block {
-      border-radius: 16px;
+      border-radius: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
       color: white;
+      text-align: center;
       position: relative;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       background-size: 200% 200%;
+      animation: fadeIn 1s ease forwards;
       cursor: pointer;
       flex-direction: column;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: transform 0.3s;
     }
     .block:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 12px rgba(255,255,255,0.1);
+      transform: scale(1.03);
     }
     .label {
       z-index: 1;
       font-weight: bold;
-      padding: 0.6rem 1rem;
-      border-radius: 10px;
-      background: rgba(255, 255, 255, 0.1);
     }
-    .guia {
-      background: #ff4081;
-      color: #fff;
-      border: 2px solid #fff;
-      animation: pulse 2s infinite;
+    .label.guia {
+      background: rgba(255, 255, 255, 0.15);
+      border: 2px solid #ff4081;
+      padding: 0.6rem 1rem;
+      border-radius: 12px;
+      font-size: 1.05rem;
+      animation: glow 1.8s ease-in-out infinite;
     }
     .frase, .portada {
       position: absolute;
@@ -62,23 +58,26 @@
       display: none;
       justify-content: center;
       align-items: center;
-      text-align: center;
       padding: 1rem;
+      text-align: center;
+      font-family: 'Poppins', sans-serif;
     }
     .frase {
       font-size: 1rem;
       animation: fadeIn 0.6s ease forwards;
     }
     .portada {
+      animation: glow 6s ease-in-out infinite;
       flex-direction: column;
-      animation: fadeIn 0.6s ease forwards;
+      gap: 1rem;
     }
     .portada img {
-      max-width: 80%;
-      max-height: 80%;
-      border-radius: 14px;
+      max-width: 85%;
+      max-height: 75%;
+      border-radius: 16px;
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
     }
+
     .ctaZone {
       position: fixed;
       bottom: 3vh;
@@ -94,44 +93,65 @@
       background: #00ffc3;
       color: #000;
       border: none;
-      padding: 1rem 2rem;
+      padding: 0.8rem 1.6rem;
       border-radius: 999px;
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      transition: background 0.3s;
     }
+    .ctaZone button:hover {
+      background: #a1ffe7;
+    }
+
     .celebracion-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0, 0, 0, 0.75);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 20;
-      animation: fadeIn 0.4s ease both;
+      animation: fadeIn 0.5s ease both;
     }
     .celebracion-message {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       color: #fff;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1.2rem 2rem;
+      border-radius: 16px;
       text-align: center;
-      padding: 2rem;
-      background: rgba(255,255,255,0.05);
-      border-radius: 20px;
+      font-family: 'Poppins', sans-serif;
+      box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
+      animation: celebracion 1.2s ease both;
     }
     .resaltado {
       color: #ffeb3b;
-      font-weight: bold;
+      font-weight: 700;
+    }
+
+    .trigguiletras {
+      position: fixed;
+      top: 1vh;
+      right: 1vw;
+      height: 18px;
+      opacity: 0.5;
+      z-index: 5;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(255,64,129,0.6); }
-      70% { box-shadow: 0 0 0 10px rgba(255,64,129,0); }
-      100% { box-shadow: 0 0 0 0 rgba(255,64,129,0); }
+    @keyframes glow {
+      0%, 100% { box-shadow: 0 0 8px #ff4081; }
+      50% { box-shadow: 0 0 18px #ff80ab; }
+    }
+    @keyframes celebracion {
+      0% { transform: scale(0.8); opacity: 0; }
+      60% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); }
     }
   </style>
 </head>
@@ -139,7 +159,7 @@
   <div class="grid" id="gridContainer"></div>
 
   <div class="ctaZone" id="ctaZone">
-    <button id="ctaBtn">📚 ¡Haz clic si abriste un libro físico!</button>
+    <button id="ctaBtn">📚 Haz clic si abriste un libro físico</button>
   </div>
 
   <div class="celebracion-overlay" id="celebracionOverlay">
@@ -148,6 +168,8 @@
     </div>
   </div>
 
+  <img src="/trigguiletras.png" alt="Trigguiletras" class="trigguiletras" />
+
   <script>
     const grid = document.getElementById("gridContainer");
     const ctaZone = document.getElementById("ctaZone");
@@ -155,39 +177,42 @@
     const celebracionOverlay = document.getElementById("celebracionOverlay");
     const celebracionMsg = document.getElementById("celebracionMsg");
 
+    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
     let libro = null;
     let portadaBloque = 0;
-    let guiaBloque = 0;
+    let bloqueGuia = 0;
     let revelado = false;
 
     function generarGradiente(hex) {
       const r = parseInt(hex.slice(1,3), 16);
       const g = parseInt(hex.slice(3,5), 16);
       const b = parseInt(hex.slice(5,7), 16);
-      return `linear-gradient(135deg, ${hex}, rgba(${Math.min(r+40,255)},${Math.min(g+40,255)},${Math.min(b+40,255)},0.9))`;
+      const light = rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85);
+      return linear-gradient(135deg, ${hex}, ${light});
     }
 
-    async function iniciar() {
-      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-      const data = await res.json();
-      libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-      portadaBloque = Math.floor(Math.random() * 4);
-      do { guiaBloque = Math.floor(Math.random() * 4); } while (guiaBloque === portadaBloque);
-      dibujarBloques();
-    }
-
-    function dibujarBloques() {
+    function dibujarUI() {
+      const w = window.innerWidth, h = window.innerHeight;
+      const cols = w > h ? 4 : 2;
+      const rows = 4 / cols;
+      grid.style.gridTemplateColumns = repeat(${cols}, 1fr);
+      grid.style.gridTemplateRows = repeat(${rows}, 1fr);
       grid.innerHTML = "";
+
       libro.palabras.forEach((palabra, i) => {
         const b = document.createElement("div");
         b.className = "block";
         b.dataset.index = i;
-        b.style.background = generarGradiente(libro.colores[i] || "#555");
+
+        if (i === bloqueGuia) {
+          b.style.background = "linear-gradient(135deg, #ff4081, #ff80ab)";
+        } else {
+          b.style.background = generarGradiente(libro.colores[i] || "#555");
+        }
 
         const label = document.createElement("div");
-        label.className = "label";
-        label.innerText = i === guiaBloque ? "¿Qué sientes?\n(toca cualquier botón)" : palabra;
-        if (i === guiaBloque) label.classList.add("guia");
+        label.className = "label" + (i === bloqueGuia ? " guia" : "");
+        label.innerText = i === bloqueGuia ? "¿Qué sientes?" : ${emojis[i]} ${palabra};
 
         const frase = document.createElement("div");
         frase.className = "frase";
@@ -207,14 +232,20 @@
 
     function manejarClick(bloque) {
       const i = parseInt(bloque.dataset.index);
+      const children = bloque.children;
       if (revelado) return location.reload();
 
       if (i === portadaBloque) {
+        [...children].forEach(c => c.style.display = "none");
+        children[2].style.display = "flex";
+
         [...grid.children].forEach((blk, j) => {
-          blk.children[0].style.display = "none";
-          if (j === i) blk.children[2].style.display = "flex";
-          else blk.children[1].style.display = "flex";
+          if (j !== i) {
+            blk.children[0].style.display = "none";
+            blk.children[1].style.display = "flex";
+          }
         });
+
         revelado = true;
         ctaZone.style.display = "flex";
       } else {
@@ -230,15 +261,29 @@
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        celebracionMsg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString("es-MX")}</span> libros físicos ✨`;
+        celebracionMsg.innerHTML = ✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨;
       } catch {
         celebracionMsg.innerText = "📚 Error al contar libros";
       }
-      setTimeout(() => location.reload(), 3200);
+      setTimeout(() => location.reload(), 3000);
     };
 
+    async function iniciar() {
+      try {
+        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+        const data = await res.json();
+        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        portadaBloque = Math.floor(Math.random() * 4);
+        do { bloqueGuia = Math.floor(Math.random() * 4); } while (bloqueGuia === portadaBloque);
+        dibujarUI();
+      } catch (e) {
+        console.error("Error cargando contenido:", e);
+      }
+    }
+
     window.addEventListener("load", iniciar);
-    window.addEventListener("resize", dibujarBloques);
+    window.addEventListener("resize", dibujarUI);
+    window.addEventListener("orientationchange", dibujarUI);
   </script>
 </body>
 </html>
