--- a/public/index.html
+++ b/public/index.html
@@ -3,287 +3,199 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Trascendente</title>
+  <title>TrigguiApp – Un instante. Un universo.</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      width: 100%;
-      font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      font-family: 'Archivo', sans-serif;
+      overflow: hidden;
     }
-    .grid {
+
+    #breath {
       position: absolute;
-      top: 1.5vw;
-      bottom: 1.5vw;
-      left: 1.5vw;
-      right: 1.5vw;
-      display: grid;
-      gap: 1vw;
-    }
-    .block {
-      border-radius: 18px;
+      inset: 0;
+      background: #000;
+      color: #fff;
       display: flex;
-      align-items: center;
       justify-content: center;
-      color: white;
-      text-align: center;
-      position: relative;
-      font-size: 1.1rem;
-      background-size: 200% 200%;
-      animation: fadeIn 1s ease forwards;
-      cursor: pointer;
-      flex-direction: column;
-      transition: transform 0.3s;
+      align-items: center;
+      animation: fadeOut 5s forwards ease;
+      z-index: 10;
     }
+    .circle {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 2px solid #fff;
+      animation: breathe 5s ease-in-out forwards;
+    }
+
+    #grid {
+      position: absolute;
+      inset: 2.5vw;
+      display: grid;
+      gap: 1.5vw;
+      opacity: 0;
+      animation: fadeIn 6s ease forwards;
+    }
+
+    .block {
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #fff;
+      font-size: 1.2rem;
+      font-weight: bold;
+      cursor: pointer;
+      background-size: 200% 200%;
+      transition: all 0.4s ease;
+      overflow: hidden;
+      position: relative;
+    }
+
     .block:hover {
       transform: scale(1.03);
-    }
-    .label {
-      z-index: 1;
-      font-weight: bold;
-    }
-    .label.guia {
-      background: rgba(255, 255, 255, 0.15);
-      border: 2px solid #ff4081;
-      padding: 0.6rem 1rem;
-      border-radius: 12px;
-      font-size: 1.05rem;
-      animation: glow 1.8s ease-in-out infinite;
-    }
-    .frase, .portada {
-      position: absolute;
-      inset: 0;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-    }
-    .frase {
-      font-size: 1rem;
-      animation: fadeIn 0.6s ease forwards;
-    }
-    .portada {
-      animation: glow 6s ease-in-out infinite;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    .portada img {
-      max-width: 85%;
-      max-height: 75%;
-      border-radius: 16px;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+      filter: brightness(1.15);
     }
 
-    .ctaZone {
+    .accionable {
+      font-family: 'Poppins', sans-serif;
+      font-size: 1rem;
+      opacity: 0;
+      transition: opacity 0.4s ease;
+      padding: 1rem;
+    }
+
+    .accionable.show {
+      opacity: 1;
+    }
+
+    #cta {
       position: fixed;
-      bottom: 3vh;
+      bottom: 4vh;
       left: 50%;
       transform: translateX(-50%);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      z-index: 10;
-      text-align: center;
-    }
-    .ctaZone button {
       background: #00ffc3;
       color: #000;
-      border: none;
-      padding: 0.8rem 1.6rem;
-      border-radius: 999px;
-      font-size: 1.05rem;
       font-weight: bold;
+      border: none;
+      padding: 0.9rem 1.8rem;
+      font-size: 1rem;
+      border-radius: 999px;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      transition: background 0.3s;
-    }
-    .ctaZone button:hover {
-      background: #a1ffe7;
-    }
-
-    .celebracion-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.75);
       display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 20;
-      animation: fadeIn 0.5s ease both;
-    }
-    .celebracion-message {
-      font-size: 1.4rem;
-      color: #fff;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 1.2rem 2rem;
-      border-radius: 16px;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
-      animation: celebracion 1.2s ease both;
-    }
-    .resaltado {
-      color: #ffeb3b;
-      font-weight: 700;
+      animation: pulse 2s infinite;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
     }
 
-    .trigguiletras {
-      position: fixed;
-      top: 1vh;
-      right: 1vw;
-      height: 18px;
-      opacity: 0.5;
-      z-index: 5;
+    @media (orientation: landscape) {
+      #grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
+    }
+
+    @media (orientation: portrait) {
+      #grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+      }
+    }
+
+    @keyframes breathe {
+      0% { transform: scale(1); opacity: 0.6; }
+      50% { transform: scale(2); opacity: 1; }
+      100% { transform: scale(2.8); opacity: 0; }
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      to { opacity: 1; }
     }
-    @keyframes glow {
-      0%, 100% { box-shadow: 0 0 8px #ff4081; }
-      50% { box-shadow: 0 0 18px #ff80ab; }
-    }
-    @keyframes celebracion {
-      0% { transform: scale(0.8); opacity: 0; }
-      60% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); }
+
+    @keyframes pulse {
+      0%, 100% { transform: translateX(-50%) scale(1); }
+      50% { transform: translateX(-50%) scale(1.06); }
     }
   </style>
 </head>
 <body>
-  <div class="grid" id="gridContainer"></div>
 
-  <div class="ctaZone" id="ctaZone">
-    <button id="ctaBtn">📚 Haz clic si abriste un libro físico</button>
-  </div>
-
-  <div class="celebracion-overlay" id="celebracionOverlay">
-    <div class="celebracion-message" id="celebracionMsg">
-      ✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨
-    </div>
-  </div>
-
-  <img src="/trigguiletras.png" alt="Trigguiletras" class="trigguiletras" />
+  <div id="breath"><div class="circle"></div></div>
+  <div id="grid"></div>
+  <button id="cta">📖 ¡Sí abrí un libro físico!</button>
 
   <script>
-    const grid = document.getElementById("gridContainer");
-    const ctaZone = document.getElementById("ctaZone");
-    const ctaBtn = document.getElementById("ctaBtn");
-    const celebracionOverlay = document.getElementById("celebracionOverlay");
-    const celebracionMsg = document.getElementById("celebracionMsg");
-
-    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
-    let libro = null;
-    let portadaBloque = 0;
-    let bloqueGuia = 0;
+    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
     let revelado = false;
 
-    function generarGradiente(hex) {
-      const r = parseInt(hex.slice(1,3), 16);
-      const g = parseInt(hex.slice(3,5), 16);
-      const b = parseInt(hex.slice(5,7), 16);
-      const light = rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85);
-      return linear-gradient(135deg, ${hex}, ${light});
+    function genGradient(hex) {
+      const r = parseInt(hex.slice(1,3),16);
+      const g = parseInt(hex.slice(3,5),16);
+      const b = parseInt(hex.slice(5,7),16);
+      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85)`;
+      return `linear-gradient(135deg, ${hex}, ${light})`;
     }
 
-    function dibujarUI() {
-      const w = window.innerWidth, h = window.innerHeight;
-      const cols = w > h ? 4 : 2;
-      const rows = 4 / cols;
-      grid.style.gridTemplateColumns = repeat(${cols}, 1fr);
-      grid.style.gridTemplateRows = repeat(${rows}, 1fr);
-      grid.innerHTML = "";
+    async function iniciar() {
+      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+      const data = await res.json();
+      const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
+      const portadaIndex = Math.floor(Math.random()*4);
 
+      const grid = document.getElementById("grid");
       libro.palabras.forEach((palabra, i) => {
-        const b = document.createElement("div");
-        b.className = "block";
-        b.dataset.index = i;
-
-        if (i === bloqueGuia) {
-          b.style.background = "linear-gradient(135deg, #ff4081, #ff80ab)";
-        } else {
-          b.style.background = generarGradiente(libro.colores[i] || "#555");
-        }
-
-        const label = document.createElement("div");
-        label.className = "label" + (i === bloqueGuia ? " guia" : "");
-        label.innerText = i === bloqueGuia ? "¿Qué sientes?" : ${emojis[i]} ${palabra};
-
-        const frase = document.createElement("div");
-        frase.className = "frase";
-        frase.innerText = libro.frases[i];
-
-        const portada = document.createElement("div");
-        portada.className = "portada";
-        const img = document.createElement("img");
-        img.src = libro.portada;
-        portada.appendChild(img);
-
-        b.append(label, frase, portada);
-        b.onclick = () => manejarClick(b);
-        grid.appendChild(b);
+        const div = document.createElement("div");
+        div.className = "block";
+        div.style.background = genGradient(libro.colores[i] || "#555");
+        div.innerHTML = `
+          <div class="emoji">${emojis[i]} ${palabra}</div>
+          <div class="accionable" id="acc${i}">${libro.frases[i]}</div>
+        `;
+        div.onclick = () => {
+          if (revelado) return location.reload();
+          if (i === portadaIndex) {
+            div.innerHTML = `<img src="${libro.portada}" style="max-width:85%; max-height:75%; border-radius:16px; box-shadow:0 10px 24px rgba(0,0,0,0.4)" />`;
+            document.querySelectorAll(".block").forEach((b,j)=>{
+              if (j !== i) {
+                b.querySelector(".emoji").style.display = "none";
+                b.querySelector(".accionable").classList.add("show");
+              }
+            });
+            document.getElementById("cta").style.display = "block";
+            revelado = true;
+          } else {
+            div.querySelector(".emoji").style.display = "none";
+            div.querySelector(".accionable").classList.add("show");
+          }
+        };
+        grid.appendChild(div);
       });
     }
 
-    function manejarClick(bloque) {
-      const i = parseInt(bloque.dataset.index);
-      const children = bloque.children;
-      if (revelado) return location.reload();
-
-      if (i === portadaBloque) {
-        [...children].forEach(c => c.style.display = "none");
-        children[2].style.display = "flex";
-
-        [...grid.children].forEach((blk, j) => {
-          if (j !== i) {
-            blk.children[0].style.display = "none";
-            blk.children[1].style.display = "flex";
-          }
-        });
-
-        revelado = true;
-        ctaZone.style.display = "flex";
-      } else {
-        bloque.children[0].style.display = "none";
-        bloque.children[1].style.display = "flex";
-      }
-    }
-
-    ctaBtn.onclick = async () => {
-      ctaBtn.disabled = true;
-      celebracionOverlay.style.display = "flex";
-      celebracionMsg.innerHTML = '✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨';
+    document.getElementById("cta").onclick = async () => {
+      const btn = document.getElementById("cta");
+      btn.disabled = true;
+      btn.innerText = "✨ Sumando tu lectura...";
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        celebracionMsg.innerHTML = ✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨;
+        btn.innerText = `✅ ¡Gracias! Van ${data.total.toLocaleString('es-MX')} libros abiertos`;
+        setTimeout(() => location.reload(), 3000);
       } catch {
-        celebracionMsg.innerText = "📚 Error al contar libros";
+        btn.innerText = "⚠️ Error al contar";
       }
-      setTimeout(() => location.reload(), 3000);
     };
 
-    async function iniciar() {
-      try {
-        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-        const data = await res.json();
-        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-        portadaBloque = Math.floor(Math.random() * 4);
-        do { bloqueGuia = Math.floor(Math.random() * 4); } while (bloqueGuia === portadaBloque);
-        dibujarUI();
-      } catch (e) {
-        console.error("Error cargando contenido:", e);
-      }
-    }
-
-    window.addEventListener("load", iniciar);
-    window.addEventListener("resize", dibujarUI);
-    window.addEventListener("orientationchange", dibujarUI);
+    window.addEventListener("load", () => setTimeout(iniciar, 5200));
   </script>
 </body>
 </html>
