--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,27 @@
       background: #000;
       color: #fff;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      animation: fadeOut 5s forwards ease;
+      text-align: center;
       z-index: 10;
+      animation: fadeOut 5.6s forwards ease;
     }
     .circle {
       width: 80px;
       height: 80px;
       border-radius: 50%;
       border: 2px solid #fff;
+      margin-bottom: 1.8rem;
       animation: breathe 5s ease-in-out forwards;
+    }
+    .breath-text {
+      font-size: 1.1rem;
+      font-weight: 500;
+      font-family: 'Poppins', sans-serif;
+      color: #ccc;
+      max-width: 80%;
     }
 
     #grid {
@@ -45,6 +55,7 @@
     .block {
       border-radius: 20px;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
@@ -56,6 +67,7 @@
       transition: all 0.4s ease;
       overflow: hidden;
       position: relative;
+      padding: 0.8rem;
     }
 
     .block:hover {
@@ -91,6 +103,23 @@
       display: none;
       animation: pulse 2s infinite;
       box-shadow: 0 4px 14px rgba(0,0,0,0.3);
+      z-index: 5;
+    }
+
+    #thanks {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.2rem;
+      background: rgba(255,255,255,0.05);
+      padding: 1.5rem 2rem;
+      border-radius: 18px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.08);
+      display: none;
+      text-align: center;
     }
 
     @media (orientation: landscape) {
@@ -129,9 +158,15 @@
 </head>
 <body>
 
-  <div id="breath"><div class="circle"></div></div>
+  <div id="breath">
+    <div class="circle"></div>
+    <div class="breath-text">Detente. Respira. Este instante es tuyo.<br/>Elige un bloque. Descubre una frase.<br/>O revela el libro que podría cambiar tu día.</div>
+  </div>
+
   <div id="grid"></div>
-  <button id="cta">📖 ¡Sí abrí un libro físico!</button>
+
+  <button id="cta">📚 Sí, abrí un libro físico cercano 💫</button>
+  <div id="thanks"></div>
 
   <script>
     const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
@@ -183,15 +218,19 @@
 
     document.getElementById("cta").onclick = async () => {
       const btn = document.getElementById("cta");
-      btn.disabled = true;
-      btn.innerText = "✨ Sumando tu lectura...";
+      btn.style.display = "none";
+      const msg = document.getElementById("thanks");
+      msg.style.display = "block";
+      msg.innerText = "✨ Gracias. Este instante cuenta...";
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        btn.innerText = `✅ ¡Gracias! Van ${data.total.toLocaleString('es-MX')} libros abiertos`;
-        setTimeout(() => location.reload(), 3000);
+        setTimeout(() => {
+          msg.innerHTML = `✅ Ya somos <strong>+${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos 💛`;
+        }, 1300);
+        setTimeout(() => location.reload(), 5000);
       } catch {
-        btn.innerText = "⚠️ Error al contar";
+        msg.innerText = "📚 ¡Error al contar!";
       }
     };
 
