--- a/public/index.html
+++ b/public/index.html
@@ -9,38 +9,41 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      background: #0d0e1a;
       font-family: 'Archivo', sans-serif;
       overflow: hidden;
     }
 
-    #breath {
+    #loader {
       position: absolute;
       inset: 0;
       background: #000;
-      color: #fff;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       text-align: center;
-      z-index: 10;
-      animation: fadeOut 5.6s forwards ease;
+      color: white;
+      z-index: 20;
+      animation: fadeOut 6s ease forwards;
     }
-    .circle {
-      width: 80px;
-      height: 80px;
+
+    .loader-circle {
+      width: 60px;
+      height: 60px;
+      border: 3px solid #fff;
+      border-top: 3px solid transparent;
       border-radius: 50%;
-      border: 2px solid #fff;
-      margin-bottom: 1.8rem;
-      animation: breathe 5s ease-in-out forwards;
+      animation: spin 4s linear infinite;
+      margin-bottom: 1.5rem;
     }
-    .breath-text {
-      font-size: 1.1rem;
-      font-weight: 500;
+
+    .loader-text {
       font-family: 'Poppins', sans-serif;
+      font-size: 1.1rem;
+      line-height: 1.6;
       color: #ccc;
-      max-width: 80%;
+      padding: 0 2rem;
     }
 
     #grid {
@@ -49,7 +52,8 @@
       display: grid;
       gap: 1.5vw;
       opacity: 0;
-      animation: fadeIn 6s ease forwards;
+      animation: fadeIn 6.2s ease forwards;
+      z-index: 1;
     }
 
     .block {
@@ -66,13 +70,12 @@
       background-size: 200% 200%;
       transition: all 0.4s ease;
       overflow: hidden;
-      position: relative;
-      padding: 0.8rem;
+      padding: 1rem;
     }
 
     .block:hover {
       transform: scale(1.03);
-      filter: brightness(1.15);
+      filter: brightness(1.1);
     }
 
     .accionable {
@@ -96,30 +99,30 @@
       color: #000;
       font-weight: bold;
       border: none;
-      padding: 0.9rem 1.8rem;
+      padding: 1rem 2rem;
       font-size: 1rem;
       border-radius: 999px;
       cursor: pointer;
       display: none;
       animation: pulse 2s infinite;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
       z-index: 5;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
     }
 
-    #thanks {
+    #overlay {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #fff;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.9);
+      color: white;
       font-family: 'Poppins', sans-serif;
-      font-size: 1.2rem;
-      background: rgba(255,255,255,0.05);
-      padding: 1.5rem 2rem;
-      border-radius: 18px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.08);
+      font-size: 1.3rem;
       display: none;
+      align-items: center;
+      justify-content: center;
       text-align: center;
+      flex-direction: column;
+      z-index: 30;
+      padding: 2rem;
     }
 
     @media (orientation: landscape) {
@@ -136,10 +139,9 @@
       }
     }
 
-    @keyframes breathe {
-      0% { transform: scale(1); opacity: 0.6; }
-      50% { transform: scale(2); opacity: 1; }
-      100% { transform: scale(2.8); opacity: 0; }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     @keyframes fadeOut {
@@ -158,15 +160,18 @@
 </head>
 <body>
 
-  <div id="breath">
-    <div class="circle"></div>
-    <div class="breath-text">Detente. Respira. Este instante es tuyo.<br/>Elige un bloque. Descubre una frase.<br/>O revela el libro que podría cambiar tu día.</div>
+  <div id="loader">
+    <div class="loader-circle"></div>
+    <div class="loader-text">
+      <strong>Detente.</strong><br/>
+      Este instante es solo tuyo.<br/>
+      Descubre un libro o abre uno que tengas cerca.
+    </div>
   </div>
 
   <div id="grid"></div>
-
-  <button id="cta">📚 Sí, abrí un libro físico cercano 💫</button>
-  <div id="thanks"></div>
+  <button id="cta">📚 Sí, tomé un libro físico cercano y lo abrí 💫</button>
+  <div id="overlay"></div>
 
   <script>
     const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
@@ -192,7 +197,7 @@
         div.className = "block";
         div.style.background = genGradient(libro.colores[i] || "#555");
         div.innerHTML = `
-          <div class="emoji">${emojis[i]} ${palabra}</div>
+          <div class="emoji" style="text-align:center;">${emojis[i]} ${palabra}</div>
           <div class="accionable" id="acc${i}">${libro.frases[i]}</div>
         `;
         div.onclick = () => {
@@ -217,24 +222,25 @@
     }
 
     document.getElementById("cta").onclick = async () => {
-      const btn = document.getElementById("cta");
-      btn.style.display = "none";
-      const msg = document.getElementById("thanks");
-      msg.style.display = "block";
-      msg.innerText = "✨ Gracias. Este instante cuenta...";
+      const cta = document.getElementById("cta");
+      const overlay = document.getElementById("overlay");
+      cta.style.display = "none";
+      overlay.style.display = "flex";
+      overlay.innerHTML = "✨ Gracias. Este instante ya cuenta...";
+
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
         setTimeout(() => {
-          msg.innerHTML = `✅ Ya somos <strong>+${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos 💛`;
-        }, 1300);
+          overlay.innerHTML = `✅ Ya somos <strong>+${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos 💛`;
+        }, 1200);
         setTimeout(() => location.reload(), 5000);
       } catch {
-        msg.innerText = "📚 ¡Error al contar!";
+        overlay.innerText = "⚠️ Error al contar libros.";
       }
     };
 
-    window.addEventListener("load", () => setTimeout(iniciar, 5200));
+    window.addEventListener("load", () => setTimeout(iniciar, 6000));
   </script>
 </body>
 </html>
