--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       justify-content: center;
       text-align: center;
       color: white;
-      z-index: 20;
+      z-index: 50;
       animation: fadeOut 6s ease forwards;
     }
 
@@ -50,9 +50,9 @@
       position: absolute;
       inset: 2.5vw;
       display: grid;
-      gap: 1.5vw;
+      gap: 2vw;
       opacity: 0;
-      animation: fadeIn 6.2s ease forwards;
+      animation: showBlocks 1s ease 6s forwards;
       z-index: 1;
     }
 
@@ -64,18 +64,27 @@
       align-items: center;
       text-align: center;
       color: #fff;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       font-weight: bold;
       cursor: pointer;
       background-size: 200% 200%;
       transition: all 0.4s ease;
       overflow: hidden;
-      padding: 1rem;
+      padding: 1.2rem;
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+      background-blend-mode: screen;
     }
 
     .block:hover {
-      transform: scale(1.03);
-      filter: brightness(1.1);
+      transform: scale(1.05);
+      filter: brightness(1.15);
+    }
+
+    .emoji {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
 
     .accionable {
@@ -92,21 +101,21 @@
 
     #cta {
       position: fixed;
-      bottom: 4vh;
+      bottom: 3vh;
       left: 50%;
       transform: translateX(-50%);
       background: #00ffc3;
       color: #000;
       font-weight: bold;
       border: none;
-      padding: 1rem 2rem;
-      font-size: 1rem;
+      padding: 0.6rem 1.2rem;
+      font-size: 0.95rem;
       border-radius: 999px;
       cursor: pointer;
       display: none;
       animation: pulse 2s infinite;
       z-index: 5;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.25);
     }
 
     #overlay {
@@ -148,13 +157,13 @@
       to { opacity: 0; visibility: hidden; }
     }
 
-    @keyframes fadeIn {
+    @keyframes showBlocks {
       to { opacity: 1; }
     }
 
     @keyframes pulse {
       0%, 100% { transform: translateX(-50%) scale(1); }
-      50% { transform: translateX(-50%) scale(1.06); }
+      50% { transform: translateX(-50%) scale(1.08); }
     }
   </style>
 </head>
@@ -170,7 +179,7 @@
   </div>
 
   <div id="grid"></div>
-  <button id="cta">📚 Sí, tomé un libro físico cercano y lo abrí 💫</button>
+  <button id="cta">📖 Sí, abrí un libro físico cercano</button>
   <div id="overlay"></div>
 
   <script>
@@ -181,7 +190,7 @@
       const r = parseInt(hex.slice(1,3),16);
       const g = parseInt(hex.slice(3,5),16);
       const b = parseInt(hex.slice(5,7),16);
-      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85)`;
+      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.75)`;
       return `linear-gradient(135deg, ${hex}, ${light})`;
     }
 
@@ -197,7 +206,7 @@
         div.className = "block";
         div.style.background = genGradient(libro.colores[i] || "#555");
         div.innerHTML = `
-          <div class="emoji" style="text-align:center;">${emojis[i]} ${palabra}</div>
+          <div class="emoji">${emojis[i]} ${palabra}</div>
           <div class="accionable" id="acc${i}">${libro.frases[i]}</div>
         `;
         div.onclick = () => {
@@ -233,14 +242,23 @@
         const data = await res.json();
         setTimeout(() => {
           overlay.innerHTML = `✅ Ya somos <strong>+${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos 💛`;
-        }, 1200);
+        }, 1300);
         setTimeout(() => location.reload(), 5000);
       } catch {
         overlay.innerText = "⚠️ Error al contar libros.";
       }
     };
 
-    window.addEventListener("load", () => setTimeout(iniciar, 6000));
+    // Mostrar loader solo la primera vez
+    if (sessionStorage.getItem("trigguiLoaderShown")) {
+      document.getElementById("loader").style.display = "none";
+      document.getElementById("grid").style.animation = "none";
+      document.getElementById("grid").style.opacity = "1";
+      iniciar();
+    } else {
+      sessionStorage.setItem("trigguiLoaderShown", "true");
+      window.addEventListener("load", () => setTimeout(iniciar, 6000));
+    }
   </script>
 </body>
 </html>
